--- a/2022_7_13.html
+++ b/2022_7_13.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title></title>
   <script src="vue.js"></script>
-  <script type="text/javascript">
+  <script type="text/javascript"> //取消控制台的production的报错
     Vue.config.productionTip=false
   </script>
 </head>
